--- a/algorithmen/minimalwert.html
+++ b/algorithmen/minimalwert.html
@@ -64,6 +64,8 @@ function minimalwert(werte){
 <style>
     .code{
         width: 400px;
+        position: relative;
+        left: calc(50% - 200px);
         text-align: left;
         justify-self: center;
         padding: 30px 30px;
