--- a/index.html
+++ b/index.html
@@ -82,20 +82,29 @@
             <p><a href="./programmieren/rekursion.html">Rekursion</a></p>
             <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
             <p><a href="./programmieren/interface.html">Interface</a></p>
-            <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>
-            <p>abstrakte Klasse vs Interface</p>
+            <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>        
             <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
+            <br>
+            <p><a href="./programmieren/abstrakt_generisch_interface.html">abstrakte Klasse<br>vs<br>generische Klasse<br>vs<br>Interface</a></p>
         </div>
 
         <div class="abschnitt">
             <h3>Softwareentwicklung</h3>
             <hr>
-            <p>CRUD</p>
-            <p>Agile</p>
+            <p><a href="./softwareentwicklung/projektphasen.html">Projektphasen</a></p>
+            <p><a href="./softwareentwicklung/crud.html">CRUD</a></p>
+            <p><a href="./softwareentwicklung/agile.html">Agiles Projektmanagement</a></p>
+            <p>Scrum</p>
+            <p>Kanban</p>
+            <p>MDSD<br><small>Model-Driven Software Development</small></p>
+            <p>TDD<br><small>Test-Driven Development</small></p>
+            <p><a href="./softwareentwicklung/wasserfallmodell.html">Wasserfallmodell</a></p>
+            <p><a href="./softwareentwicklung/spiralmodell.html">Spiralmodell</a></p>
+            <p><a href="./softwareentwicklung/v-modell.html">V-Modell</a></p>
             <p>Nutzwertanalyse</p>
+            <p>Kostenanalyse</p>
             <p>Lastenheft</p>
-            <p>Pflichtenheft</p>
-            <p>Projekte</p>
+            <p>Pflichtenheft</p>            
         </div>
 
         <div class="abschnitt">
