--- a/netzwerke/grundlagen.html
+++ b/netzwerke/grundlagen.html
@@ -214,6 +214,8 @@
     <style>
         table{
             width: 600px;
+            position: relative;
+            left: calc(50% - 300px);
         }
 
         p, h4{
@@ -222,6 +224,8 @@
 
         .netzwerke{
             width: 400px;
+            position: relative;
+            left: calc(50% - 200px);
         }
     </style>
 </body>
