--- a/netzwerke/subnetting.html
+++ b/netzwerke/subnetting.html
@@ -174,29 +174,35 @@
     <p class="text"></p>    
     
     <style>
-       code{
+      code{
         font-size: 12pt;
-       }
+      }
 
-       label{
+      label{
         color: red;
-       }
+      }
 
-       .gruen{
+      .gruen{
         color: green;
-       }
+      }
 
-       .rechts{
+      .rechts{
         text-align: end;
-       }
+      }
 
-       .links{
+      .links{
         text-align: left;
-       }
+      }
 
-       td{
+      td{
         text-align: center;
-       }
+      }
+
+       table{
+            width: 600px;
+            position: relative;
+            left: calc(50% - 300px);
+        }
     </style>
 </body>
 </html>
