--- a/programmieren/grundlagen.html
+++ b/programmieren/grundlagen.html
@@ -396,11 +396,10 @@ mein_text("Mein Text");
 
 <style>
     pre{
-        min-width: 400px;
-        max-width: 800px;
+        width: 800px;
         text-align: left;
         position: relative;
-        /*left: calc(50% - 200px);*/
+        left: calc(50% - 400px);
 
         border: solid 1px lightgrey;
         border-radius: 10px;
@@ -413,6 +412,12 @@ mein_text("Mein Text");
 
     b{
         font-size: 12pt;
+    }
+
+    table{
+        width: 1200px;
+        position: relative;
+        left: calc(50% - 600px);
     }
 </style>
 
