--- a/uml/aktivitaetsdiagramm.html
+++ b/uml/aktivitaetsdiagramm.html
@@ -65,6 +65,8 @@
     <style>
         table{
             width: 600px;
+            position: relative;
+            left: calc(50% - 300px);
         }
     </style>
 
