--- a/uml/klassendiagramm.html
+++ b/uml/klassendiagramm.html
@@ -39,5 +39,13 @@
     <h3>Beispiel:</h3>
     <a href="https://www.lucidchart.com/pages/de/uml-klassendiagramme" target="_blank"><img src="klassendiagramm_beispiel.png" width="400px"></a>
 
+    <style>
+        table{
+            width: 300px;
+            position: relative;
+            position: relative;
+            left: calc(50% - 150px);
+        }
+    </style>
 </body>
 </html>
