--- a/uml/sequenzdiagramm.html
+++ b/uml/sequenzdiagramm.html
@@ -96,7 +96,12 @@
     <img src="sequenzdiagramm_beispiel2.png">
 
     <style>
-
+        table{
+            width: 500px;
+            position: relative;
+            position: relative;
+            left: calc(50% - 250px);
+        }
     </style>
 
 </body>
