--- a/uml/use-case.html
+++ b/uml/use-case.html
@@ -55,6 +55,9 @@
     <style>
         table{
             width: 600px;
+            position: relative;
+            position: relative;
+            left: calc(50% - 300px);
         }
     </style>
 </body>
