--- a/wiso/wirtschaftssektoren.html
+++ b/wiso/wirtschaftssektoren.html
@@ -39,7 +39,9 @@
 
     <style>
         table{
-            width: 400px !important;
+            width: 400px;
+            position: relative;
+            left: calc(50% - 200px);
         }    
     </style>
     
