--- a/datenbanken/grundlagen.html
+++ b/datenbanken/grundlagen.html
@@ -78,6 +78,8 @@
     <style>
         table{
             width: 600px;
+            position: relative;
+            left: calc(50% - 300px);
         }
 
         .spalte{
