--- a/datenbanken/modelle.html
+++ b/datenbanken/modelle.html
@@ -47,6 +47,8 @@
     <style>
         table{
             width: 400px;
+            position: relative;
+            left: calc(50% - 200px);
         }
     </style>
 </body>
