--- a/uml/pap.html
+++ b/uml/pap.html
@@ -42,5 +42,14 @@
     <h3>Beispiel:</h3>
     <img src="pap_beispiel.png">
 
+    <style>
+        table{
+            width: 600px;
+            position: relative;
+            position: relative;
+            left: calc(50% - 300px);
+        }
+    </style>
+
 </body>
 </html>
