--- a/algorithmen/bubble-sort.html
+++ b/algorithmen/bubble-sort.html
@@ -10,7 +10,8 @@
 <body>
     <h1><a href="https://en.wikipedia.org/wiki/Bubble_sort" target="_blank">Bubble-Sort</a></h1>
     <p class="text">Der Bubble-Sort-Alorithmus vergleicht eine Liste (bzw. Array) von Werten nach und nach mit dem jeweils nachfolgenden Wert. Wenn der Wert größer ist als der nachfolgende Wert, werden die Werte getauscht.</p>
-    
+    <img src="bubble-sort.webp">
+
     <h3>Bubble-Sort als Pseudocode</h3>    
 <pre class="code">
 Beginne Funktion bubbleSort mit dem Array werte als Argument
@@ -94,7 +95,7 @@ function bubbleSort(array $werte): array{
 <style>
     .code{
         width: 500px;
-        position: relative;
+        position: sticky;
         left: calc(50% - 250px);
         text-align: left;
         justify-self: center;
