--- a/algorithmen/maximalwert.html
+++ b/algorithmen/maximalwert.html
@@ -64,7 +64,7 @@ function maximalwert(werte){
 <style>
     .code{
         width: 400px;
-        position: relative;
+        position: sticky;
         left: calc(50% - 200px);
         text-align: left;
         justify-self: center;
