--- a/algorithmen/minimalwert.html
+++ b/algorithmen/minimalwert.html
@@ -64,10 +64,12 @@ function minimalwert(werte){
 <style>
     .code{
         width: 400px;
-        position: relative;
-        left: calc(50% - 200px);
-        text-align: left;
         justify-self: center;
+        
+        position:sticky;
+        left: calc(50% - 200px);        
+        
+        text-align: left;        
         padding: 30px 30px;
         border: solid 1px lightgrey;
         border-radius: 20px;
