--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             <p><a href="./algorithmen/bubble-sort.html">Bubble-Sort</a></p>
             <p><a href="./algorithmen/minimalwert.html">Minimalwert finden</a></p>
             <p><a href="./algorithmen/maximalwert.html">Maximalwert finden</a></p>
-            <p>Selection Sort</p>
-            <p>Insertion Sort</p>
+            <p><a href="./algorithmen/selection-sort.html">Selection Sort</a></p>
+            <p><a href="./algorithmen/insertion-sort.html">Insertion Sort</a></p>
             <p>Quicksort</p>                        
             <p>Merge Sort</p>
             <p>Bucket Sort</p>
             <p>Shell Sort</p>
             <p>Heap Sort</p>
+            <p><a href="./algorithmen/sort-vergleich.html">Vergleich</a></p>
         </div>
 
         <div class="abschnitt">
@@ -101,6 +102,7 @@
             <p><a href="./softwareentwicklung/wasserfallmodell.html">Wasserfallmodell</a></p>
             <p><a href="./softwareentwicklung/spiralmodell.html">Spiralmodell</a></p>
             <p><a href="./softwareentwicklung/v-modell.html">V-Modell</a></p>
+            <p>REST-API</p>
             <p>Nutzwertanalyse</p>
             <p>Kostenanalyse</p>
             <p>Lastenheft</p>
