--- a/softwareentwicklung/spiralmodell.html
+++ b/softwareentwicklung/spiralmodell.html
@@ -55,6 +55,12 @@
         </tr>
     </table>
 
-    
+    <style>
+        table{
+            width: 500px;
+            position: relative;
+            left: calc(50% - 250px);
+        }
+    </style>
 </body>
 </html>
