--- a/softwareentwicklung/wasserfallmodell.html
+++ b/softwareentwicklung/wasserfallmodell.html
@@ -58,6 +58,12 @@
     <h2>Erweitertes Wasserfallmodell</h2>
     <p class="text">Im erweiterten Wasserfallmodell fällt die strikte Vorgabe eine Phase nach der anderen zu bearbeiten weg. Dadurch kann das Projektteam in eine vorhergehende Phase zurückzukehren, um z.B. im Nachhinein erfasste Fehler zu beheben.</p>
     
-
+<style>
+    table{
+        width: 500px;
+        position: relative;
+        left: calc(50% - 250px);
+    }
+</style>
 </body>
 </html>
