--- a/wiso/rechtsformen.html
+++ b/wiso/rechtsformen.html
@@ -382,11 +382,16 @@
     
     <style>
         .erklaerung{
-            width: 300px;
+            width: 400px;
         }
 
         td{
             font-size: small;
+        }
+
+        table{
+            width: 90%;
+            margin: 0 30px;
         }
     </style>
 </body>
