--- a/softwareentwicklung/v-modell.html
+++ b/softwareentwicklung/v-modell.html
@@ -72,5 +72,13 @@
         </tr>
     </table>
 
+    <style>
+        table{
+            width: 500px;
+            position: relative;
+            left: calc(50% - 250px);
+        }
+    </style>
+
 </body>
 </html>
