--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <h1>Üben für die AP2: Fachinformatiker Anwendungsentwicklung</h1>
-        <p class="mitte">Wenn Überschriften Links sind, führen sie zu der Seite, von der ich die Infos habe.</p>
+        <p class="mitte" style="margin-top: -25px;"><small>Wenn Überschriften Links sind, führen sie zu der Seite, von der ich die Infos habe (öffnet in neuem Tab).</small></p>
     </div>
 
     <div class="inhalt">        
@@ -82,11 +82,14 @@
             <p><a href="./programmieren/grundlagen.html">Grundlagen</a></p>
             <p><a href="./programmieren/rekursion.html">Rekursion</a></p>
             <p><a href="./programmieren/objektorientierung.html">Objektorientierung</a></p>
+            <p><a href="./programmieren/linked-lists.html">Linked Lists</a></p>
             <p><a href="./programmieren/interface.html">Interface</a></p>
             <p><a href="./programmieren/abstrakte_klassen.html">abstrakte Klassen</a></p>        
             <p><a href="./programmieren/generische_klassen.html">generische Klassen</a></p>
             <br>
             <p><a href="./programmieren/abstrakt_generisch_interface.html">abstrakte Klasse<br>vs<br>generische Klasse<br>vs<br>Interface</a></p>
+            <br>
+            <p><a href="./programmieren/vergleich-sprachen.html">Programmiersprachen im Vergleich</a></p>
         </div>
 
         <div class="abschnitt">
